# ChangeLog for app-arch/pigz
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/pigz/ChangeLog,v 1.34 2013/12/24 12:53:18 ago Exp $

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> pigz-2.3.1.ebuild:
  Stable for x86, wrt bug #494416

  22 Dec 2013; Pacho Ramos <pacho@gentoo.org> pigz-2.3.1.ebuild:
  amd64 stable, bug #494416

*pigz-2.3.1 (04 Nov 2013)

  04 Nov 2013; Tim Harder <radhermit@gentoo.org> +pigz-2.3.1.ebuild:
  Version bump.

  20 Sep 2013; Jeroen Roovers <jer@gentoo.org> pigz-2.3.ebuild:
  Marked ~hppa too.

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> pigz-2.3.ebuild:
  Stable for x86, wrt bug #470604

  19 May 2013; Markos Chandras <hwoarang@gentoo.org> pigz-2.3.ebuild:
  Stable on amd64 wrt bug #470604

  07 Mar 2013; Steev Klimaszewski <steev@gentoo.org> pigz-2.3.ebuild:
  Add ~arm keyword. Tested on Cortex A15, and A9.

*pigz-2.3 (07 Mar 2013)

  07 Mar 2013; Tim Harder <radhermit@gentoo.org> +pigz-2.3.ebuild,
  +files/pigz-2.3-make.patch:
  Version bump.

  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, #274113

  07 Sep 2012; Johannes Huber <johu@gentoo.org> pigz-2.2.5.ebuild:
  Stable for x86, wrt bug #433888

  07 Sep 2012; Agostino Sarubbo <ago@gentoo.org> pigz-2.2.5.ebuild:
  Stable for amd64, wrt bug #433888

  06 Aug 2012; Mike Frysinger <vapier@gentoo.org> pigz-2.2.5.ebuild:
  Add USE=static support.

  03 Aug 2012; Tim Harder <radhermit@gentoo.org> -pigz-2.1.6.ebuild,
  -pigz-2.1.6-r1.ebuild, -files/pigz-2.1.6-doubledash.patch,
  -pigz-2.1.7.ebuild:
  Remove old.

*pigz-2.2.5 (03 Aug 2012)

  03 Aug 2012; Tim Harder <radhermit@gentoo.org> +pigz-2.2.5.ebuild,
  metadata.xml:
  Version bump. Add myself as maintainer.

  30 Apr 2012; Jeff Horelick <jdhore@gentoo.org> pigz-2.2.4.ebuild:
  marked x86 per bug 402517

  30 Apr 2012; Agostino Sarubbo <ago@gentoo.org> pigz-2.2.4.ebuild:
  Stable for amd64, wrt bug #402517
