@@ -2,30 +2,22 @@
 Hash: SHA256
 
 AUX pigz-2.3-make.patch 763 SHA256 7f6a60c47ccccaa2bef5f47d01102c8ed1ec99cfd7f619b7b365b8ef2b104de3 SHA512 a4af741e750910f08ca0cc56e2680af6cd05d3b4480976ec736fd9d019ae6962bc8049e7607e75da2a420f9e7b8e831ca556134c21a8d69192ab78f64032ce85 WHIRLPOOL 2968f438d457786ab4e417eaec3fc32cc60b9289f42831d4547a20de27b9a4f3a8179ff0ad979c4d68cc0a41f3c56b00134cb1c68f354e27bb5b62b46ba90854
-DIST pigz-2.2.4.tar.gz 49505 SHA256 7e7967c47f66c07be97cbfa25c8816b72f9d35258466ea31eddc7666c914160e SHA512 ebedc10d79de9fc21cacf302eb323dd3d1c73492da9407b7a2d69be65728bac1619a4b0c6c26cdcb2b955a47572f176ee3e18f9ebc230e4db981b1ab9347da30 WHIRLPOOL a9a8882312ae0588926fc2b1c4dae0ac9a56b1f59ea8211d976d7f30fe2b798a71249d03b4d33c590b62cbddb63c6b7998c1de200880770098dc062bd367d343
 DIST pigz-2.2.5.tar.gz 49717 SHA256 e37498cbf3a475d7ebe2519751188c29564bf8dd27ba68bd3c7fe1ac08792759 SHA512 b399dee20c3484b5425490ee06404f8c6e3335a1c8eda8f625b62025dba99d2ebdd398a6acd7dd9c44cdb5370ccf66e0a6334bb5aace0a5dee30351cfd3abd4c WHIRLPOOL 178efcb07a79fd7667029c837a19291a73c089cac6dc4c2c8dceeef0ff5e836e26bdfc39d04888ed4896c36c4b52b3d96d344dbf73165acc1f320e1abea83077
 DIST pigz-2.3.1.tar.gz 86651 SHA256 629b0ce5422a3978f31742bf8275d0be2f84987140d18f390f1e3b4e46e0af54 SHA512 7cb00ab87802352c817d9b2f745948199a7e571181aec3ef161305c1d8b828790bc2fb0083d6068ba5aead5d8b8c7f53ec25ab641ae2e98eda9adf14f195dbc6 WHIRLPOOL 242e38d05215269c3c9b6602191cc6e02fd9e781b0425738c3907ccf60da9a4a36ebcda866c9c0e949ad5988dad6b468f97102352d2ed13adb7e890688c221f7
 DIST pigz-2.3.tar.gz 83636 SHA256 74bbd5962f9420549fc987ddd1ccda692ec2b29d2d612fbbe26edf3fa348ff21 SHA512 58080cb3b68d3329c3e9554b7f41b7ffe961c27cce0732e00d200f84bd4910452026cc90b026a4130dc4fef6eeaf9f6340d039521f32474ca45566f8e985301d WHIRLPOOL 808e05bfa337b421d4c18da0982d12cf880b78885ad2da37c6f84960d2102a9fc34ce078700a3ececca5805014b385e544ef17912b83444d726315af2616ffc5
-EBUILD pigz-2.2.4.ebuild 876 SHA256 9a5d58bde0bb01ef49b32b824b2de3699ab76301ab8960149a9569875a333c05 SHA512 172a8c8b742c7e797a0ee62b7c0d40e659f981330c5c17aa39d8a9cfc605714da0c741f1ae10c14ecefb46ee609c4519345be858907abdfbe78f83b5ff9d2949 WHIRLPOOL 3a3730d3bf9d4a2da68e16048bb1786897734b57b2d1ab0dc260f5b0fe70f71cc8a7d1c3fc332d8addc55088e4be513820568bc59dc69c40d554db8b98780927
 EBUILD pigz-2.2.5.ebuild 1007 SHA256 f3c12d9602d9ac89a3d7e10c6bc1cecc1f9aad6e2fd4afb6f9d2d7fbe000d75f SHA512 5fbdf07b7054174b786a0589181896615d6ca88f9738fe00b26b0b0fd4ac567da3f7c8a42765b6ec043af91414c8f2f1d15b03a6f0f1293e54133aaf9eda488d WHIRLPOOL 6d29c7dcc82d27bbdb9a7ba6590abb172e2517a504f89c31b3c819b56a1c7a7a159e6bfb3861087d0b4c0155a0245b27de938d25428f7fa5d4ac6b3efd43e31a
 EBUILD pigz-2.3.1.ebuild 978 SHA256 e034a21e952e794e16786044a43c10ab964c58776e33f0159221ad29c1962bc7 SHA512 c93d73dbf8d488cc2eaed78df81cccae6fc31177c1f9cf5eab3fd3ce6e26705dedcc261f5c1bf04c5eced1e5c99cccdfdc275eefc7e4751e6a286a58adfe607a WHIRLPOOL a6d153b5abc9a53ef386786c1a61714d82c24ae6f8138969aa08ef167287a6fbf9fe0dd67ac750c12a8a8e21e7bae04b7fef15558eb22ee42765f6619e0bb06d
 EBUILD pigz-2.3.ebuild 1058 SHA256 32efae1d41489e30bf63aa99e4c1dbe73b8851418975d2edec336ba2efb744ab SHA512 1b3537c3abdd16c015afe1c7a46c1494f686ae4b04b26fb78efa9aa7895fb6bcb9fde04b8421ed927e12d385dafd879754f7700a2579a15d9956857776f35126 WHIRLPOOL 426edb1f461a1d67e4fd3dbf70aba2e96c287fdd690ed713bb4e420c6c8ec2bf008ed85a5901d831b4dd116fb82a8e27a001330430f02481d8f17fe1d6269750
-MISC ChangeLog 4767 SHA256 2eb065b28785de8a18b470bb1f75c8de4807ceb6bd23d73a78f1e415a110327c SHA512 3b901e2a05b2cb5f08e0f7c0d1abd59287d49e91c76ee72e7165d00a8a1d5fe7ba7e597709a6c095e7e4b5d1fa3faaf1ff0de00b53ac24a3203f1857637ce883 WHIRLPOOL b6c291223f41ee8a1d2f99538ea5cf781ac0f5403272b45d155d69ffb6891f03642436453aacb7c485e7e28c8808e3501d01d2d0401cc91cf77db1d864d1fc60
+MISC ChangeLog 4879 SHA256 17e9109b969956e27428658cfa7a56e42660e957f8c5a638e9b60ab43d128edc SHA512 a79b7006df14fe15d68c94468a257f3512e5cfbaa94a4a8e3706863ada851ae67f879a5613c7cd943918b15fa5cef2daf551b7621c428c097ee623398b05c976 WHIRLPOOL 53f921c75e46726aa4e0cf042c75c6be01b65fd51a4fe69cfec7df59142be8b1ed849707dc5a945bfa22e2330effc53336b2303634dd0e97ce56b79ec2895a19
 MISC metadata.xml 368 SHA256 35fbb74d8a54360b4158ace6c7a06829a218039516c3d7d5891a43ee573f823c SHA512 e4aa1549a9484506494ee973dc43453ea862ea13ed306f47901075fa871a87d3e7c233488046b51aa5b28a12a527dd7d32d523c6a3d9df5d182b041a4d5d49b9 WHIRLPOOL 48cac1374b94c4afa8d349f48c8db11d12ab4a61a679e1f561635b3e0af7525d946afa023a38d4731b8d52ae56009ada1d3f2ddbb199f8ddee39d6fa42cb92fe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSuYPBAAoJELp701BxlEWfA/UP/2ZUEqQpOYOKCZ/0cGbj7pdv
-YeFPfq6Nz6QGp5SuseIxYLsWReajsobRnSzsU2LbhltkahmO4s1KpW7HC+YXw1D5
-FZETmdgSiG8ZohIf03BYkTEQN8Dd2rMlN5bOhzAZ/sBB9e+BxeYFWiXX6Xxl2io5
-MZ8tSslEek2YzpS/agunxaqpy/WbbC/QS+yYPl93aC5jiVAqiKpQgbhcEm6vUjJa
-typLN+450PP3viPZR5tkKipxE71TS4gBRVxVN85jTgeMxT8MXL6Ql+o51gjAKddD
-CzGYNR9dbXLoPWEtziPhE3wI2h2eOL/hgb2qjVxIRpL2c81K2BzHxA0Y0DdEOxMN
-r1qv29kGXPWd24RSeRhauVcvrOKgAwYH7B+eVNsvbIV+mWnnPJztIgLH3OWt1LnM
-VpYBdZxNS/glahO5VfE+MNeu7rlnQVti/Ht0jFkS6NMVvFWeUg8+m+iuYOQezagv
-PLS8NtNcbfjMd/fvcwfDJGeeFizeaEOOBXFmjB4rIA/5h2eyAJ58jMNqvb4gkjA+
-aepE13PaSUXr6Kp+Ii8fuBjGn6vhajHnXhSpBAfwFthp9ovjOcuf1MjjaESzf4dM
-QAuQ5XbISfH+5UgVFzGvhZTM89f+0NKoouVPMyKQVMpOHn4/FhbltuROk+q1lme6
-munRgkCoLUa1UKMD3jbk
-=Txex
+iQEcBAEBCAAGBQJSxr+EAAoJECo/aRed9267hLwH/isZFNrxv6wiD0o5SyE1WxQu
+YI5SazE2n9umOBHeNHdMcZymZ1XbvNQciGRx/E+yZ2zW4rx5A6ARpqHQfWPnhuvs
+sxT46BdUZnBqxHicRYp/3AyzjhoTporE+T5S/7e/YSFP7JL3likWiSR270R+6Rmd
++XTWNCDzIkbDcGIcLjXdy5D6aay49FEF/bmFKZZEsBya8oh+asou8Uip3gAhKn8O
+mtcvES6LYZfUaDbLHdC8fbBxqmNfqbBTkDTljwDBzxSo547R6VwEInfJiw+PBgmq
+nzIobQsM4brToU3bAY/y+T+pv4lNw/PQwEVg6QXPOqPcYsFNVj+zOXM0ZxP7FVE=
+=v/i3
 -----END PGP SIGNATURE-----
