@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/pigz
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/pigz/ChangeLog,v 1.34 2013/12/24 12:53:18 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/pigz/ChangeLog,v 1.35 2014/01/03 13:47:47 pinkbyte Exp $
+
+  03 Jan 2014; Sergey Popov <pinkbyte@gentoo.org> -pigz-2.2.4.ebuild:
+  Security cleanup, wrt bug #457794
 
   24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> pigz-2.3.1.ebuild:
   Stable for x86, wrt bug #494416
